{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 72,
  "lineage": "909f5e64-8720-48d4-a6f3-72097c82a3b4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-vm-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/networkInterfaces/nic-vm-hub",
            "internal_domain_name_suffix": "yjnrtskuge4etorrsmi3eqv32c.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-vm"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-8C-0C-78",
            "name": "nic-vm-hub",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-hub-888",
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Compute/virtualMachines/vm-linux-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_subnet.subnet-hub-vm",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-vm-hub-nva",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/networkInterfaces/nic-vm-hub-nva",
            "internal_domain_name_suffix": "yjnrtskuge4etorrsmi3eqv32c.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-vm"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-82-A9-90",
            "name": "nic-vm-hub-nva",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "rg-hub-888",
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Compute/virtualMachines/vm-linux-hub-nva"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_subnet.subnet-hub-vm",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-vm-onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/networkInterfaces/nic-vm-onprem",
            "internal_domain_name_suffix": "pk4dnenz0rcujac2f3iectjs2d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem-vm"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-BF-93-EA",
            "name": "nic-vm-onprem",
            "private_ip_address": "172.16.1.4",
            "private_ip_addresses": [
              "172.16.1.4"
            ],
            "resource_group_name": "rg-onprem-888",
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Compute/virtualMachines/vm-linux-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg-onprem",
            "azurerm_subnet.subnet-onprem-vm",
            "azurerm_virtual_network.vnet-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-vm-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/networkInterfaces/nic-vm-spoke",
            "internal_domain_name_suffix": "ky3y5eb2yybeblu5ca5ilmlced.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-vm"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-C2-70-FC",
            "name": "nic-vm-spoke",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "rg-spoke1-888",
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Compute/virtualMachines/vm-linux-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.subnet-spoke1-vm",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-vm-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/networkInterfaces/nic-vm-spoke",
            "internal_domain_name_suffix": "fy3zoyk3yure3hmuryhtrmstqd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-87-A7-19",
            "name": "nic-vm-spoke",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "rg-spoke2-888",
            "virtual_machine_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Compute/virtualMachines/vm-linux-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.subnet-spoke2-vm",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.229.136.161",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-bastion",
            "resource_group_name": "rg-hub-888",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-vpngateway-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/publicIPAddresses/pip-vpngateway-hub",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.178.28.61",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-vpngateway-hub",
            "resource_group_name": "rg-hub-888",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-vpngateway-onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/publicIPAddresses/pip-vpngateway-onprem",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.178.28.60",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-vpngateway-onprem",
            "resource_group_name": "rg-onprem-888",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route-to-firewall-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/routeTables/route-table-spoke1/routes/route-to-firewal-spoke1",
            "name": "route-to-firewal-spoke1",
            "next_hop_in_ip_address": "10.0.2.5",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-spoke1-888",
            "route_table_name": "route-table-spoke1",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_linux_virtual_machine.vm-hub-nva",
            "azurerm_network_interface.nic-vm-hub-nva",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_route_table.route-table-spoke1",
            "azurerm_subnet.subnet-hub-vm",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route-to-firewall-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/routeTables/route-table-spoke2/routes/route-to-firewal-spoke2",
            "name": "route-to-firewal-spoke2",
            "next_hop_in_ip_address": "10.0.2.5",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-spoke2-888",
            "route_table_name": "route-table-spoke2",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_linux_virtual_machine.vm-hub-nva",
            "azurerm_network_interface.nic-vm-hub-nva",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_route_table.route-table-spoke2",
            "azurerm_subnet.subnet-hub-vm",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/routeTables/route-table-spoke1",
            "location": "westeurope",
            "name": "route-table-spoke1",
            "resource_group_name": "rg-spoke1-888",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-firewal-spoke1",
                "next_hop_in_ip_address": "10.0.2.5",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-vm"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/routeTables/route-table-spoke2",
            "location": "westeurope",
            "name": "route-table-spoke2",
            "resource_group_name": "rg-spoke2-888",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-firewal-spoke2",
                "next_hop_in_ip_address": "10.0.2.5",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-888",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-hub-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-888",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-hub-inbound-dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "delegation": [
              {
                "name": "Microsoft.Network.dnsResolvers",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Network/dnsResolvers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-inbound-dns",
            "name": "subnet-hub-inbound-dns",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-888",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-hub-outbound-dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "delegation": [
              {
                "name": "Microsoft.Network.dnsResolvers",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Network/dnsResolvers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-outbound-dns",
            "name": "subnet-hub-outbound-dns",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-888",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-hub-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-vm",
            "name": "subnet-hub-vm",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-888",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-onprem-dns-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.2.0/24"
            ],
            "delegation": [
              {
                "name": "Microsoft.Network.dnsResolvers",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Network/dnsResolvers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem-dns-inbound",
            "name": "subnet-onprem-dns-inbound",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-onprem-888",
            "virtual_network_name": "vnet-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg-onprem",
            "azurerm_virtual_network.vnet-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-onprem-dns-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.3.0/24"
            ],
            "delegation": [
              {
                "name": "Microsoft.Network.dnsResolvers",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Network/dnsResolvers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem-dns-outbound",
            "name": "subnet-onprem-dns-outbound",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-onprem-888",
            "virtual_network_name": "vnet-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg-onprem",
            "azurerm_virtual_network.vnet-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-onprem-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem-vm",
            "name": "subnet-onprem-vm",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-onprem-888",
            "virtual_network_name": "vnet-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg-onprem",
            "azurerm_virtual_network.vnet-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-onprem-vpngateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-onprem-888",
            "virtual_network_name": "vnet-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg-onprem",
            "azurerm_virtual_network.vnet-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-spoke1-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-vm",
            "name": "subnet-spoke1-vm",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke1-888",
            "virtual_network_name": "vnet-spoke1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-spoke2-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm",
            "name": "subnet-spoke2-vm",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke2-888",
            "virtual_network_name": "vnet-spoke2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route-table-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-vm",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/routeTables/route-table-spoke1",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-vm"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1",
            "azurerm_route_table.route-table-spoke1",
            "azurerm_subnet.subnet-spoke1-vm",
            "azurerm_virtual_network.vnet-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route-table-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm",
            "route_table_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/routeTables/route-table-spoke2",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm"
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2",
            "azurerm_route_table.route-table-spoke2",
            "azurerm_subnet.subnet-spoke2-vm",
            "azurerm_virtual_network.vnet-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c9195bc2-3154-493c-ba31-9311d242bde2",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "westeurope",
            "name": "vnet-hub",
            "resource_group_name": "rg-hub-888",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-vm",
                "name": "subnet-hub-vm"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-inbound-dns",
                "name": "subnet-hub-inbound-dns"
              },
              {
                "address_prefix": "10.0.5.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-outbound-dns",
                "name": "subnet-hub-outbound-dns"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/12"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9136bc7a-d4b9-4445-805c-2f50414d32e3",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem",
            "location": "westeurope",
            "name": "vnet-onprem",
            "resource_group_name": "rg-onprem-888",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem-vm",
                "name": "subnet-onprem-vm"
              },
              {
                "address_prefix": "172.16.2.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem-dns-inbound",
                "name": "subnet-onprem-dns-inbound"
              },
              {
                "address_prefix": "172.16.3.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem-dns-outbound",
                "name": "subnet-onprem-dns-outbound"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "908f3b56-c63c-4002-ae9f-103e85b16223",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1",
            "location": "westeurope",
            "name": "vnet-spoke1",
            "resource_group_name": "rg-spoke1-888",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/subnets/subnet-spoke1-vm",
                "name": "subnet-spoke1-vm"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "61973b2e-c55d-4e22-9d94-8e0f38b25383",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2",
            "location": "westeurope",
            "name": "vnet-spoke2",
            "resource_group_name": "rg-spoke2-888",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/subnets/subnet-spoke2-vm",
                "name": "subnet-spoke2-vm"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg-spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpngateway-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 64000,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.1.254"
                    ],
                    "ip_configuration_name": "vnetGatewayIpConfig",
                    "tunnel_ip_addresses": [
                      "52.178.28.61"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": true,
            "generation": "Generation1",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworkGateways/vpngateway-hub",
            "ip_configuration": [
              {
                "name": "vnetGatewayIpConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/publicIPAddresses/pip-vpngateway-hub",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "westeurope",
            "name": "vpngateway-hub",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "rg-hub-888",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.pip-vpngateway-hub",
            "azurerm_resource_group.rg-hub",
            "azurerm_subnet.subnet-gateway",
            "azurerm_virtual_network.vnet-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpngateway-onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65000,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "172.16.0.254"
                    ],
                    "ip_configuration_name": "vnetGatewayIpConfig",
                    "tunnel_ip_addresses": [
                      "52.178.28.60"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": true,
            "generation": "Generation1",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworkGateways/vpngateway-onprem",
            "ip_configuration": [
              {
                "name": "vnetGatewayIpConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/publicIPAddresses/pip-vpngateway-onprem",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "westeurope",
            "name": "vpngateway-onprem",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "rg-onprem-888",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.pip-vpngateway-onprem",
            "azurerm_resource_group.rg-onprem",
            "azurerm_subnet.subnet-onprem-vpngateway",
            "azurerm_virtual_network.vnet-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "hub-to-onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": true,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/connections/hub-to-onprem",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/localNetworkGateways/lng-hub",
            "location": "westeurope",
            "name": "hub-to-onprem",
            "resource_group_name": "rg-hub-888",
            "routing_weight": 0,
            "shared_key": "sample-shared-key",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworkGateways/vpngateway-hub"
          },
          "dependencies": [
            "azurerm_local_network_gateway.lng-hub",
            "azurerm_public_ip.pip-vpngateway-hub",
            "azurerm_public_ip.pip-vpngateway-onprem",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-onprem",
            "azurerm_subnet.subnet-gateway",
            "azurerm_subnet.subnet-onprem-vpngateway",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-onprem",
            "azurerm_virtual_network_gateway.vpngateway-hub",
            "azurerm_virtual_network_gateway.vpngateway-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "onprem-to-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": true,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/connections/onprem-to-hub",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/localNetworkGateways/lng-onprem",
            "location": "westeurope",
            "name": "onprem-to-hub",
            "resource_group_name": "rg-onprem-888",
            "routing_weight": 0,
            "shared_key": "sample-shared-key",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-onprem-888/providers/Microsoft.Network/virtualNetworkGateways/vpngateway-onprem"
          },
          "dependencies": [
            "azurerm_local_network_gateway.lng-onprem",
            "azurerm_public_ip.pip-vpngateway-hub",
            "azurerm_public_ip.pip-vpngateway-onprem",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-onprem",
            "azurerm_subnet.subnet-gateway",
            "azurerm_subnet.subnet-onprem-vpngateway",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-onprem",
            "azurerm_virtual_network_gateway.vpngateway-hub",
            "azurerm_virtual_network_gateway.vpngateway-onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-hub-to-spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/hub-to-spoke1",
            "name": "hub-to-spoke1",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1",
            "resource_group_name": "rg-hub-888",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_public_ip.pip-vpngateway-hub",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.subnet-gateway",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1",
            "azurerm_virtual_network_gateway.vpngateway-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-hub-to-spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/hub-to-spoke2",
            "name": "hub-to-spoke2",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2",
            "resource_group_name": "rg-hub-888",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_public_ip.pip-vpngateway-hub",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.subnet-gateway",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2",
            "azurerm_virtual_network_gateway.vpngateway-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-spoke1-to-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke1-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke1/virtualNetworkPeerings/spoke1-to-hub",
            "name": "spoke1-to-hub",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-spoke1-888",
            "use_remote_gateways": true,
            "virtual_network_name": "vnet-spoke1"
          },
          "dependencies": [
            "azurerm_public_ip.pip-vpngateway-hub",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke1",
            "azurerm_subnet.subnet-gateway",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke1",
            "azurerm_virtual_network_gateway.vpngateway-hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-spoke2-to-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke2-888/providers/Microsoft.Network/virtualNetworks/vnet-spoke2/virtualNetworkPeerings/spoke2-to-hub",
            "name": "spoke2-to-hub",
            "remote_virtual_network_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-hub-888/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-spoke2-888",
            "use_remote_gateways": true,
            "virtual_network_name": "vnet-spoke2"
          },
          "dependencies": [
            "azurerm_public_ip.pip-vpngateway-hub",
            "azurerm_resource_group.rg-hub",
            "azurerm_resource_group.rg-spoke2",
            "azurerm_subnet.subnet-gateway",
            "azurerm_virtual_network.vnet-hub",
            "azurerm_virtual_network.vnet-spoke2",
            "azurerm_virtual_network_gateway.vpngateway-hub"
          ]
        }
      ]
    }
  ]
}